# kairo

./: .env.example  .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml
.claude/skills/phase-11-workstation/: SKILL.md
.github/workflows/: tests.yml
config/: permissions.yaml  pricing.yaml  settings.yaml
config/skills/packs/: architect-reviewer.md  backend-implementer.md  core-engineering.md
docs/: KAIRO-USER-GUIDE.md  KAIRO_10X_PRODUCT_PLATFORM_PLAN.md  KIRA-USER-GUIDE.md  KIRA_10X_PRODUCT_PLATFORM_PLAN.md  PLAN-10-workspaces.md  PLAN-10B-teams.md  PLAN-10C-providers.md  PLAN-11-workstation.md  PLAN-13-services.md  PLAN-14-office.md  PLAN-15-graph.md  PLAN-15_5-uiux-repair.md  PLAN-16-attention.md  PLAN-2-memory.md  PLAN-3-tasks.md  PLAN-4-knowledge.md  PLAN-5-evals.md  PLAN-6-multi-agent.md  PLAN-7-voice-permissions-checkpoint.md  PLAN-7-voice.md  PLAN-8-ui.md  PLAN-9-daily.md  PLAN-eval-cost-control.md  PLAN.md  README.md  REMOTE-OPERATOR.md  ROADMAP-12-16-execution.md  ROADMAP-post-10B.md  architecture.md  evals-baseline-phase6.md  evals-baseline-phase7.md  evals-baseline.md  evals-cost-control.md  learning-notes.md  migration-macos.md  phase-11-implementation-playbook.md  verification-10B.md  verification-10C.md  verification-11.md  verification-13.md  (+4 more)
docs/assets/: KIRA-BRAND-ASSETS.md
docs/decisions/: 0001-from-scratch-loop.md  0002-reflection-writes-bypass-the-gate.md  0003-unattended-runs-deny-and-demote.md  0004-converters-are-gated-io-and-the-kb-is-a-contained-injection-sink.md  0005-how-we-know-it-works.md  0006-sub-agents-are-scoped-visible-and-doubly-gated.md  0007-voice-is-an-untrusted-read-only-surface.md  0008-the-workstation-ui-is-an-authenticated-local-peer.md  0009-connectors-and-egress.md  0010-digest.md  0011-projects-and-scoped-memory.md  0012-modes.md  0013-model-registry-and-cost-ledger.md  0014-orchestration-on-spawn.md  0015-team-tool-intelligence.md  0016-provider-integration.md  0017-workstation-ui.md  0018-context-reuse.md  0019-research-services-live.md  0020-ai-team-office.md  0021-memory-graph.md  0022-workstation-journey.md  0023-cost-aware-routing.md
docs/fable-frontend-parity/: 00-executive-summary.md  01-backend-capability-inventory.md  02-frontend-backend-parity-matrix.md  03-user-workflow-analysis.md  04-implementation-roadmap.md  05-test-and-observability-gaps.md
docs/fable-skill-forge/: 00-README.md  01-current-state-audit.md  02-skill-system-design.md  03-skill-pack-schema.md  04-evaluation-and-rollout.md
docs/fable-skill-forge/packs/: architect-reviewer.md  backend-implementer.md  core-engineering.md  qa-eval.md  security-review.md
src/jarvis/: __init__.py  __main__.py  config.py  net.py  paths.py
src/jarvis/actions/: __init__.py  executor.py  intents.py  journal.py  preview.py  requests.py  resolve.py
src/jarvis/agents/: __init__.py  service.py  store.py
src/jarvis/attention/: __init__.py  builders.py  dreaming.py  readmodel.py  routing.py  runner.py  store.py
src/jarvis/cli/: __init__.py  backup.py  connect.py  doctor.py  dream.py  graph.py  jobs.py  render.py  repl.py  reset.py
src/jarvis/connectors/: __init__.py  base.py  consent.py  demo.py  factory.py  kakao.py  oauth.py  telegram.py  tokens.py
src/jarvis/core/: __init__.py  agent.py  anthropic_client.py  client.py  context.py  events.py  execution.py  prompts.py
src/jarvis/digest/: __init__.py  builder.py  store.py
src/jarvis/graph/: __init__.py  builder.py  code_dependencies.py  index.py  merge.py  obsidian.py  review.py  search.py  service.py  store.py  suggest.py
src/jarvis/intelligence/: __init__.py  context.py  coordinator.py  publisher.py  report.py  store.py
src/jarvis/knowledge/: __init__.py  convert_worker.py  converters.py  links.py  service.py  store.py  wiki.py
src/jarvis/memory/: __init__.py  embeddings.py  reflection.py  service.py  store.py
src/jarvis/models/: __init__.py  context_reuse.py  factory.py  openai_client.py  prompt_layout.py  providers.py  registry.py  roles.py
src/jarvis/observability/: __init__.py  budget.py  cost.py  egress.py  ledger.py  logging.py
src/jarvis/orchestration/: __init__.py  context.py  engine.py  estimate.py  roles.py  store.py  teams.py  workflows.py
src/jarvis/permissions/: __init__.py  approvals.py  gate.py  modes.py  policy.py  subagent.py  unattended.py
src/jarvis/persistence/: __init__.py  artifacts.py  backup.py  database_identity.py  db.py  fts.py  instance_lock.py  migrations.py  reset_recovery.py  saved_views.py  sessions.py
src/jarvis/projects/: __init__.py  context.py  export.py  service.py  snapshot.py  store.py
src/jarvis/remote/: __init__.py  attachments.py  news_brief.py  operator.py  telegram.py  (+1 more)
src/kira/: __init__.py  __main__.py  config.py  paths.py
tests/evals/: __init__.py  baselines.yaml  cassette.py  judge.py  judge_fixtures.yaml  recorder.py  report.py  retrieval.py  runner.py
tests/ui/: approval_dod.py  capture.py  graph_dod.py  meeting_dod.py  message_dod.py  office_dod.py  router_dod.py  startup_dod.py  workbench_dod.py
tests/unit/: test_action_adversarial.py  test_action_preview.py  test_agent.py  test_agent_run_store.py  test_anthropic_client.py  test_architecture_doc.py  test_artifact_producer_hooks.py  test_artifacts_store.py  test_attendee_resolve.py  test_attention_queue.py  test_attention_routing.py  test_attention_store.py  test_backup.py  test_budget.py  test_builtin_tools.py  test_cache_reuse_readmodel.py  test_calendar_write.py  test_capability_truth.py  test_chat_feedback_ui.py  test_chat_lifecycle_ui.py  test_chat_surface.py  test_cli_identity.py  test_config.py  test_connect_cli.py  test_connector_env_config.py  test_connector_hub.py  test_connector_journal.py  test_connector_tools.py  test_connector_truth.py  test_connector_write_tools.py  test_connectors_base.py  test_connectors_factory.py  test_context.py  test_context_reuse_capability.py  test_context_reuse_ledger.py  test_context_reuse_openai.py  test_context_reuse_policy.py  test_context_reuse_safety.py  test_context_reuse_wiring.py  test_conversation_header.py  (+240 more)
(+379 files in other folders)
