[project]
name = "jarvis"
version = "0.1.0"
description = "A from-scratch Jarvis-style agentic assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Habibulloh Utboev", email = "habibullochutboev@gmail.com" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.116.0",
    "apscheduler>=3.11,<4",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6,<0.2",
    "numpy>=2.5.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "trafilatura>=2.1.0",
    "tzlocal>=5",
    "voyageai>=0.4.1",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[project.optional-dependencies]
docling = [
    "docling>=2.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade,
# B bugbear, SIM simplify, ASYNC async-correctness.
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
