[project]
name = "kira"
version = "0.1.0"
description = "Kira, a local-first agentic workplace"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Habibulloh Utboev", email = "habibullochutboev@gmail.com" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.116.0",
    "apscheduler>=3.11,<4",
    "argon2-cffi>=25.1.0",
    "httpx>=0.27",  # connectors REST (Phase 9); also a transitive dep of trafilatura/voyageai
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6,<0.2",
    "numpy>=2.5.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "reportlab>=4.4,<5",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "trafilatura>=2.1.0",
    "tzlocal>=5",
    "voyageai>=0.4.1",
]

[project.scripts]
kira = "kira.__main__:main"
jarvis = "kira.__main__:main"

[project.optional-dependencies]
docling = [
    "docling>=2.92",
]
voice = [
    "elevenlabs>=1.0",
    "faster-whisper>=1.2,<2",
    "openai>=1.0",
    "sounddevice>=0.4",
]
ui = [
    "fastapi>=0.115",
    "python-multipart>=0.0.20,<0.1",  # browser-selected chat document uploads
    "uvicorn>=0.30",
]
# Inspect-only browser QA + the screenshot definition-of-done harness. Optional: without it,
# the playwright_inspect tool keeps a degrading stub and the capture harness is unavailable.
# After `uv sync --extra browser`, run `uv run playwright install chromium` once.
browser = [
    "playwright>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kira"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # UI tests use FastAPI's TestClient (httpx ASGI). fastapi is the `ui` extra at runtime;
    # this keeps `uv run pytest` self-contained without needing --extra ui. (httpx is now a
    # core dependency — connectors REST — so it's no longer listed here.)
    "fastapi>=0.115",
    "python-multipart>=0.0.20,<0.1",  # multipart parsing for chat upload route tests
    # Voice cloud SDKs: the "needs a key" adapter tests exercise the lazy-import + key-check
    # path, which requires the SDK present to reach the key branch. Runtime dep is the
    # `voice` extra; here so `uv run pytest` is self-contained. (sounddevice omitted — no
    # keyless test imports it; capture is a pure-helper + lazy-import boundary.)
    "openai>=1.0",
    "elevenlabs>=1.0",
]

[tool.mypy]
python_version = "3.13"
files = [
    "src/kira/permissions",
    "src/kira/actions",
    "src/kira/models/providers.py",
    "src/kira/models/registry.py",
    "src/kira/models/roles.py",
]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade,
# B bugbear, SIM simplify, ASYNC async-correctness.
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # Starlette's TestClient warns that httpx support is deprecated in favor of httpx2;
    # it's a third-party notice we can't act on yet, so keep it out of the suite output.
    # No category qualifier — StarletteDeprecationWarning isn't a DeprecationWarning subclass.
    "ignore:Using `httpx` with `starlette.testclient`",
]
